@startuml

title __TP-POO's Class Diagram__\n

  namespace backend.model {
    class backend.model.Circle {
    }
  }
  

  namespace backend.model {
    class backend.model.Ellipse {
    }
  }
  

  namespace backend.model {
    abstract class backend.model.Figure {
    }
  }
  

  namespace backend.model {
    class backend.model.Point {
    }
  }
  

  namespace backend.model {
    class backend.model.Rectangle {
    }
  }
  

  namespace backend.model {
    class backend.model.Square {
    }
  }
  

  namespace frontend {
    class frontend.AppLauncher {
    }
  }
  

  namespace frontend {
    class frontend.AppMenuBar {
    }
  }
  

  namespace frontend {
    class frontend.CanvasState {
    }
  }
  

  namespace frontend {
    class frontend.MainFrame {
    }
  }
  

  namespace frontend {
    class frontend.PaintPane {
    }
  }
  

  namespace frontend {
    class frontend.StatusPane {
    }
  }
  

  namespace frontend {
    namespace model {
      class frontend.model.FrontCircle {
      }
    }
  }
  

  namespace frontend {
    namespace model {
      class frontend.model.FrontEllipse {
      }
    }
  }
  

  namespace frontend {
    namespace model {
      abstract class frontend.model.FrontFigure {
      }
    }
  }
  

  namespace frontend {
    namespace model {
      class frontend.model.FrontRectangle {
      }
    }
  }
  

  namespace frontend {
    namespace model {
      class frontend.model.FrontSquare {
      }
    }
  }
  

  backend.model.Circle -up-|> backend.model.Ellipse
  backend.model.Ellipse -up-|> backend.model.Figure
  backend.model.Ellipse o-- backend.model.Point : centerPoint
  backend.model.Rectangle -up-|> backend.model.Figure
  backend.model.Rectangle o-- backend.model.Point : bottomRight
  backend.model.Rectangle o-- backend.model.Point : topLeft
  backend.model.Square -up-|> backend.model.Rectangle
  frontend.AppLauncher -up-|> javafx.application.Application
  frontend.AppMenuBar -up-|> javafx.scene.control.MenuBar
  frontend.MainFrame -up-|> javafx.scene.layout.VBox
  frontend.PaintPane -up-|> javafx.scene.layout.BorderPane
  frontend.PaintPane o-- frontend.CanvasState : canvasState
  frontend.PaintPane o-- frontend.model.FrontFigure : selectedFigure
  frontend.PaintPane o-- backend.model.Point : startPoint
  frontend.PaintPane o-- frontend.StatusPane : statusPane
  frontend.StatusPane -up-|> javafx.scene.layout.BorderPane
  frontend.model.FrontCircle -up-|> frontend.model.FrontFigure
  frontend.model.FrontEllipse -up-|> frontend.model.FrontFigure
  frontend.model.FrontFigure o-- backend.model.Figure : figure
  frontend.model.FrontRectangle -up-|> frontend.model.FrontFigure
  frontend.model.FrontSquare -up-|> frontend.model.FrontFigure


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
